tests/paczka1/small_fuzzy/27872726.err
Error in line 3: hlrxNVc8Cn4 A966 76,9
Error in line 4: hlrxNVc8Cn4 S622 32,6
